--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,7 +7,7 @@
 
   <nav>
     <ul>
-      <li> <a href="/pizza-orders">pizza orders</a> </li>
+      <li> <a href="/pizza-orders">Pizza Orders</a> </li>
       <li> <a href="/pizza-orders/new">Place order</a> </li>
     </ul>
   </nav>
