--- a/views/show.erb
+++ b/views/show.erb
@@ -2,3 +2,15 @@
 <p>Last Name: <%= @order.last_name %></p>
 <p>Topping: <%= @order.topping %></p>
 <p>Quantity: <%= @order.quantity %></p>
+
+<!-- Edit -->
+
+<form action="/pizza-orders/<%=@order.id%>/edit" method="post">
+  <input type="submit" value="Edit Pizza">
+</form>
+
+<!-- Delete -->
+
+<form action="/pizza-orders/<%=@order.id%>/delete" method="post">
+  <input type="submit" value="Delete">
+</form>
