--- a/views/show.erb
+++ b/views/show.erb
@@ -5,9 +5,8 @@
 
 <!-- Edit -->
 
-<form action="/pizza-orders/<%=@order.id%>/edit" method="post">
-  <input type="submit" value="Edit Pizza">
-</form>
+<p><a href="/pizza-orders/<%=@order.id%>/edit">Edit Order</a></p>
+
 
 <!-- Delete -->
 
